unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Communication_to_Appropriate_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Communication_to_Appropriate_Contacts__c</fullName>
    <inlineHelpText>Communication sent to the appropriate contact- internal or external</inlineHelpText>
    <label>Communication to Appropriate Contacts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>