unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Compass_Status__c.field-meta.xml
<CustomField>
    <fullName>Compass_Status__c</fullName>
    <label>Compass Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>