unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Compass_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Compass_Status_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Compass Status Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>