unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Complete_Explanation_Sent_Comments__c.field-meta.xml
<CustomField>
    <fullName>Complete_Explanation_Sent_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complete Explanation Sent Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>