unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Complete_Explanation_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Complete_Explanation_Sent_to_Customer__c</fullName>
    <label>Complete Explanation Sent to Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>