unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Completed_Checklist_Comments__c.field-meta.xml
<CustomField>
    <fullName>Completed_Checklist_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Checklist Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>