unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Completed_Checklist_n_Group_Issue_Folder__c.field-meta.xml
<CustomField>
    <fullName>Completed_Checklist_n_Group_Issue_Folder__c</fullName>
    <label>Completed Checklist n Group Issue Folder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>