unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Completed_Within_SLA_Comments__c.field-meta.xml
<CustomField>
    <fullName>Completed_Within_SLA_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Within SLA Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>