unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Completed_Within_SLA_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Completed_Within_SLA_Guidelines__c</fullName>
    <label>Completed Within SLA Guidelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>