unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Compliant_Administerable__c.field-meta.xml
<CustomField>
    <fullName>Compliant_Administerable__c</fullName>
    <label>Compliant &amp; Administerable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>