unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Compliant_Administerable_Comments__c.field-meta.xml
<CustomField>
    <fullName>Compliant_Administerable_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Compliant &amp; Administerable Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>