unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Confirm_Save_the_Date_Comments__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Save_the_Date_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirm Save the Date Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>