unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Confirm_Save_the_Date_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Save_the_Date_Meeting__c</fullName>
    <label>Confirm Save the Date Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>