unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Contact_Information_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Information Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>