unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Continuity_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Continuity_of_Coverage__c</fullName>
    <label>Continuity of Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>