unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Continuity_of_Coverage_Comments__c.field-meta.xml
<CustomField>
    <fullName>Continuity_of_Coverage_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Continuity of Coverage Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>