unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Contract_Change__c.field-meta.xml
<CustomField>
    <fullName>Contract_Change__c</fullName>
    <label>Contract Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>