unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Contract_Change_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contract_Change_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Change Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>