unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Correct_Amendment_Number_Used__c.field-meta.xml
<CustomField>
    <fullName>Correct_Amendment_Number_Used__c</fullName>
    <label>Correct Amendment Number Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>