unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Correct_Billing_Mode_Selected__c.field-meta.xml
<CustomField>
    <fullName>Correct_Billing_Mode_Selected__c</fullName>
    <label>Correct Billing Mode Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>