unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Correct_GI_Comments__c.field-meta.xml
<CustomField>
    <fullName>Correct_GI_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Correct GI Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>