unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Correct_GI_Included_on_RS__c.field-meta.xml
<CustomField>
    <fullName>Correct_GI_Included_on_RS__c</fullName>
    <label>Correct GI Included on RS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>