unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Correct_Items_NotedForCorrections__c.field-meta.xml
<CustomField>
    <fullName>Correct_Items_NotedForCorrections__c</fullName>
    <label>Correct Items Noted For Corrections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>