unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Correct_Policy_Comments__c.field-meta.xml
<CustomField>
    <fullName>Correct_Policy_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Correct Policy Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>