unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Correct_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Correct_Policy_Number__c</fullName>
    <label>Correct Policy Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>