unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Correct_Rounding__c.field-meta.xml
<CustomField>
    <fullName>Correct_Rounding__c</fullName>
    <label>Correct Rounding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>