unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Correct_Spouse_Rates_Comments__c.field-meta.xml
<CustomField>
    <fullName>Correct_Spouse_Rates_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Correct Spouse Rates Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>