unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Correct_Spouse_Rates_for_Voluntary__c.field-meta.xml
<CustomField>
    <fullName>Correct_Spouse_Rates_for_Voluntary__c</fullName>
    <label>Correct Spouse Rates for Voluntary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>