unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/CSW_Group_Note_Comments__c.field-meta.xml
<CustomField>
    <fullName>CSW_Group_Note_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSW Group Note Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>