unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/CSW_LifePro_Changes__c.field-meta.xml
<CustomField>
    <fullName>CSW_LifePro_Changes__c</fullName>
    <label>CSW/LifePro Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>