unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/CSW_Member_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>CSW_Member_Notes_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSW Member Notes Comments</label>
    <type>TextArea</type>
</CustomField>