unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/CSW_Member_Notes_for_Grandfathering__c.field-meta.xml
<CustomField>
    <fullName>CSW_Member_Notes_for_Grandfathering__c</fullName>
    <label>CSW Member Notes for Grandfathering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>