unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Customer_Service_Cases_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Cases_90_Days__c</fullName>
    <inlineHelpText>Customer Service Cases in the Last 90 days</inlineHelpText>
    <label>Customer Service Cases 90 Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>