unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Customer_Service_Cases_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Cases_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Service Cases Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>