unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Date_of_Manager_Audit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Manager_Audit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Manager Audit</label>
    <type>Date</type>
</CustomField>