unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Delinquent_Report__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Report__c</fullName>
    <label>Delinquent Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>