unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Delinquent_Report_Comments__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Report_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delinquent Report Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>