unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Disability_Features_Comments__c.field-meta.xml
<CustomField>
    <fullName>Disability_Features_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disability Features Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>