unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Disability_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Disability_Provisions__c</fullName>
    <label>Disability Provisions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>