unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Disability_Provisions_Comment__c.field-meta.xml
<CustomField>
    <fullName>Disability_Provisions_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disability Provisions Comment</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>