unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discrepancies_Added_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discrepancies_Added_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discrepancies Added Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>