unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discrepancies_AddedtoFollow_up_SpreadSht__c.field-meta.xml
<CustomField>
    <fullName>Discrepancies_AddedtoFollow_up_SpreadSht__c</fullName>
    <inlineHelpText>Were Discrepancies Added to Follow-up Spreadsheet (TN Groups Only)</inlineHelpText>
    <label>Discrepancies AddedtoFollow-up SpreadSht</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>