unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Billing_Method__c</fullName>
    <label>Discuss Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>