unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Billing_Method_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Billing_Method_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discuss Billing Method Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>