unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Differences_in_Scrub__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Differences_in_Scrub__c</fullName>
    <inlineHelpText>Discuss any differences noted during scrub that need to be verified.</inlineHelpText>
    <label>Discuss  Differences in Scrub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>