unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Differences_in_Scrub_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Differences_in_Scrub_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discuss Differences in Scrub Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>