unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Disability_Reporting_Addiitional__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Disability_Reporting_Addiitional__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <inlineHelpText>Discuss disability reporting options if LTD/STD included. Also address the need for additional forms.</inlineHelpText>
    <label>Discuss Disability Reporting/Addiitional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Burn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>