unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Master_Application__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Master_Application__c</fullName>
    <label>Discuss Master Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>