unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Online_Billing_Services__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Online_Billing_Services__c</fullName>
    <label>Discuss Online Billing/Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>