unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Online_Billing_Services_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Online_Billing_Services_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discuss Online Billing/Services Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>