unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Timeline__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>Discuss Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Burn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>