unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Type_of_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Type_of_Enrollment__c</fullName>
    <label>Discuss Type of Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>