unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Discuss_Type_of_Enrollment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Type_of_Enrollment_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discuss Type of Enrollment Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>