unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/DocFinity_Comments__c.field-meta.xml
<CustomField>
    <fullName>DocFinity_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocFinity Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>