unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Docfinity_Notations_Added__c.field-meta.xml
<CustomField>
    <fullName>Docfinity_Notations_Added__c</fullName>
    <label>Docfinity Notations Added</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>