unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Docfinity_Notations_Comments__c.field-meta.xml
<CustomField>
    <fullName>Docfinity_Notations_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Docfinity Notations Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>