unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Docfinity_Uploaded_Indexed_Comments__c.field-meta.xml
<CustomField>
    <fullName>Docfinity_Uploaded_Indexed_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Docfinity Uploaded &amp; Indexed Comments</label>
    <type>TextArea</type>
</CustomField>