unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Docfinity_Uploaded_Indexed_Properly__c.field-meta.xml
<CustomField>
    <fullName>Docfinity_Uploaded_Indexed_Properly__c</fullName>
    <label>Docfinity Uploaded &amp; Indexed Properly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>