unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Document_Scanned_Comments__c.field-meta.xml
<CustomField>
    <fullName>Document_Scanned_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Scanned Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>