unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Documentation_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Total_Score__c</fullName>
    <formula>IF ( Salesforce_Case_Setup_Correct__c , 20 ,0)+
IF ( Emails_Sent_From_Salesforce_Case__c , 10 ,0)+
IF ( Salesforce_Enrollment_Checklist__c , 10 ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documentation Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>