unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Documents_in_Postmaster__c.field-meta.xml
<CustomField>
    <fullName>Documents_in_Postmaster__c</fullName>
    <label>Documents in Postmaster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>