unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Documents_in_Postmaster_Comments__c.field-meta.xml
<CustomField>
    <fullName>Documents_in_Postmaster_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Documents in Postmaster Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>