unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Documents_Scanned_Under_Correct_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Documents_Scanned_Under_Correct_Doc_Type__c</fullName>
    <label>Documents Scanned Under Correct Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>