unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Download_Email_Comments__c.field-meta.xml
<CustomField>
    <fullName>Download_Email_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Download Email Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>