unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Download_Email_Sent_Score__c.field-meta.xml
<CustomField>
    <fullName>Download_Email_Sent_Score__c</fullName>
    <label>Download Email Sent Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>