unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Earning_Definition_Correct__c.field-meta.xml
<CustomField>
    <fullName>Earning_Definition_Correct__c</fullName>
    <label>Earning Definition Correct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>