unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Earnings_Definition_Comments__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Definition_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Earnings Definition Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>