unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/ECD_Met_Comments__c.field-meta.xml
<CustomField>
    <fullName>ECD_Met_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ECD Met Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>