unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Effective_Date_Comments__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>